syntax = "proto3";

package app;

option go_package = "./";

service UrlShortener {
  rpc ShortenUrl(ShortenUrlRequest) returns (ShortenUrlResponse) {}
  rpc GetUrl(GetUrlRequest) returns (GetUrlResponse) {}
}

message ShortenUrlRequest {
  string url = 1;
}

message ShortenUrlResponse {
  string alias = 1;
}

message GetUrlRequest {
  string alias = 1;
}

message GetUrlResponse {
  string url = 1;
}